--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,3 +8,5 @@ anyhow = "1.0.93"
 axum = "0.7.9"
 thiserror = "2.0.3"
 tokio = { version = "1.41.1", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.18"
