--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -10,3 +10,4 @@ thiserror = "2.0.3"
 tokio = { version = "1.41.1", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.18"
+core = { path = "../core" }
