--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -14,6 +14,7 @@ thiserror = "2.0.3"
 tracing = "0.1.41"
 anyhow = "1.0.93"
 axum = "0.7.9"
+tracing-subscriber = "0.3.19"
 
 [dev-dependencies]
 serial_test = "3.2.0"
